--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,11 @@
-language: cpp
-compiler:
- - clang
+llanguage: julia
+os:
+ - linux
+ - osx
 notifications:
  email: false
-env:
- matrix:
-  - JULIAVERSION="julianightlies"
-before_install:
- - sudo add-apt-repository ppa:staticfloat/julia-deps -y
- - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
- - sudo apt-get update -qq -y
- - sudo apt-get install libpcre3-dev julia -y
 script:
- - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("SALSA"))`); Pkg.pin("SALSA"); Pkg.resolve()'
+ - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("SALSA"))`); Pkg.pin("SALSA"); Pkg.resolve(); Pkg.build("HDF5")'
  - julia -e 'using SALSA; @assert isdefined(:SALSA); @assert typeof(SALSA) === Module'
  - julia --code-coverage test/runtests.jl
  - julia -e 'Pkg.update(); Pkg.add("Lint"); using Lint; lintpkg("SALSA",returnMsgs=true)'
