--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
-language: julia
-julia:
-  - release
-os:
- - linux
- - osx
+language: cpp
+compiler:
+- clang
 notifications:
- email: false
+email: false
+env:
+matrix:
+ - JULIAVERSION="julianightlies"
+before_install:
+ - sudo add-apt-repository ppa:staticfloat/julia-deps -y
+ - sudo add-apt-repository ppa:staticfloat/${JULIAVERSION} -y
+ - sudo apt-get update -qq -y
+ - sudo apt-get install libpcre3-dev julia -y
 script:
  - julia -e 'Pkg.init(); run(`ln -s $(pwd()) $(Pkg.dir("SALSA"))`); Pkg.pin("SALSA"); Pkg.resolve()'
  - julia -e 'using SALSA; @assert isdefined(:SALSA); @assert typeof(SALSA) === Module'
