--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ os:
 notifications:
  email: false
 script:
+ - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
  - julia -e 'Pkg.clone(pwd()); Pkg.build("SALSA"); Pkg.test("SALSA"; coverage=true)'
  - julia -e 'Pkg.add("Lint"); using Lint; lintpkg("SALSA",returnMsgs=true)'
 after_success:
